--- a/_posts/Puzzles/2022-08-21-Puzzle01.md
+++ b/_posts/Puzzles/2022-08-21-Puzzle01.md
@@ -3,10 +3,10 @@ layout: post
 title: 'Puzzle 1'
 tag: "puzzle"
 categories: "puzzles"
-solution: "_posts/puzzles/2022-08-21-Solution01.md"
 ---
 
 **Problem**: Suppose you have an $$ n \times n $$ grid. Show that for any $$ 2n - 1 $$ points chosen on the grid, there exist $$ 3 $$ points that form a right-angle triangle.
 
 **Extension**: Show that $$ 2n - 2 $$ points aren't sufficient to get an (axis-aligned) right-angle triangle. Is it sufficient to get any right-angle triangle (not necessarily axis-aligned)?
 
+[Solution](Solution01.html){:class="solutioncss"}
