--- a/_posts/Puzzles/2022-08-21-Solution01.md
+++ b/_posts/Puzzles/2022-08-21-Solution01.md
@@ -2,12 +2,12 @@
 layout: post
 title: 'Solution 1'
 tag: "solution"
-
+categories: "puzzles"
 ---
 
-Problem: Suppose you have an $$ n \times n $$ grid. Show that for any $$ 2n - 1 $$ points chosen on the grid, there exist $$ 3 $$ points that form a right-angle triangle.
+**Problem**: Suppose you have an $$ n \times n $$ grid. Show that for any $$ 2n - 1 $$ points chosen on the grid, there exist $$ 3 $$ points that form a right-angle triangle.
 
-Solution: The standard solution here is to use the pigeon-hole principle. 
+**Solution**: The standard solution here is to use the pigeon-hole principle. 
 
 We note that the existence of an (axis-aligned) right-angle triangle is guaranteed if there exists a point such that there exists one point in the same row (i.e. with the same y-coordinate) and another point in the same column (i.e. with the same x-coordinate). 
 
@@ -16,7 +16,7 @@ This motivates us to try to find the number of points that share a row/column wi
 Therefore, the minimum number of points that share a row is $$ n $$. Likewise, the number of points that share a column is $$ n $$. Given that we have only $$ 2n - 1 $$ points, we see that there must be $$ 1 $$ point which both shares a row with another point and shares a column with another point. 
 
 
-Extension: Show that $$ 2n - 2 $$ points aren't sufficient to get an (axis-aligned) right-angle triangle. Is it sufficient to get any right-angle triangle (not necessarily axis-aligned)?
+**Extension**: Show that $$ 2n - 2 $$ points aren't sufficient to get an (axis-aligned) right-angle triangle. Is it sufficient to get any right-angle triangle (not necessarily axis-aligned)?
 
-Solution (Extension): If the grid is $$ [1,n] \times [1,n] $$, consider the $$ 2n - 2 $$ points $$ (1,1), (1,2), \dots, (1,n-2), (1,n-1), (2,n), (3,n), \dots, (n-1,n), (n,n) $$. We see that no right-angle triangle can be made (even non axis aligned). 
+**Solution (Extension)**: If the grid is $$ [1,n] \times [1,n] $$, consider the $$ 2n - 2 $$ points $$ (1,1), (1,2), \dots, (1,n-2), (1,n-1), (2,n), (3,n), \dots, (n-1,n), (n,n) $$. We see that no right-angle triangle can be made (even non axis aligned). 
 
