--- a/_posts/Puzzles/2022-08-28-Puzzle02.md
+++ b/_posts/Puzzles/2022-08-28-Puzzle02.md
@@ -5,10 +5,10 @@ tag: "puzzle"
 categories: "puzzles"
 ---
 
-**Problem**: A cricketer has a strike rate of $$ 70 $$ in the middle of the match and raises it to $$ 80 $$ by the end.
+**Problem**: A basketball player has a season free throw average of $$ 70\% $$ halfway through the season, and raises it to $$ 80\% $$ by the end of the season.
 
-Is it necessarily true that it was exactly $$ 75 $$ at some point? Why or why not?
+Is it necessarily true that it was exactly $$ 75\% $$ at some point? Why or why not? [Source](https://twitter.com/TaterTotient/status/1563246271884042253)
 
-**Extension**: For which integer triples $$ (a,b,c) $$ can a cricketer go from a strike rate of $$ a $$ to $$ c $$ while always crossing a strike rate $$ b $$.
+**Extension**: For which integer triples $$ (a,b,c) $$ can a basketball player go from a free throw average of $$ a $$ to $$ c $$ while avoiding a free throw average of $$ b $$.
  
 [Solution](Solution02.html)
