--- a/_posts/Puzzles/2022-08-28-Solution02.md
+++ b/_posts/Puzzles/2022-08-28-Solution02.md
@@ -5,13 +5,29 @@ tag: "solution"
 categories: "puzzles"
 ---
 
-**Problem**: A cricketer has a strike rate of $$ 70 $$ in the middle of the match and raises it to $$ 80 $$ by the end.
-Is it necessarily true that it was exactly $$ 75 $$ at some point? Why or why not?
+**Problem**: A basketball player has a season free throw average of $$ 70\% $$ halfway through the season, and raises it to $$ 80\% $$ by the end of the season.
+Is it necessarily true that it was exactly $$ 75\% $$ at some point? Why or why not?
 
-**Solution**: T 
+**Solution**:  Let $$ (70\%, x_1, \dots, x_n, 80 \%) $$ be the free throw averages after every free throw starting from the season's halfway mark until the end of the season. 
 
+Now suppose that at no point in time was the free throw average $$ 75 \% $$. We know that there must exist some $$ i $$ such that $$ x_i < 75\% < x_{i+1} $$. Suppose that the number of free throws taken at point $$ i $$ is $$ n_i $$ and the number of successful throws taken are $$ s_i $$. Additionally, as the free throw average increases, we know that the free throw taken after the $$ i $$th point must have been successful. Therefore, 
 
-**Extension**: Show that $$ 2n - 2 $$ points aren't sufficient to get an (axis-aligned) right-angle triangle. Is it sufficient to get any right-angle triangle (not necessarily axis-aligned)?
+$$ x_i = \frac{s_i}{n_i} < \frac{3}{4} \text{ and } x_{i+1} = \frac{s_i + 1}{n_i + 1} > \frac{3}{4} $$
 
-**Solution (Extension)**: If the grid is $$ [1,n] \times [1,n] $$, consider the $$ 2n - 2 $$ points $$ (1,1), (1,2), \dots, (1,n-2), (1,n-1), (2,n), (3,n), \dots, (n-1,n), (n,n) $$. We see that no right-angle triangle can be made (even non axis aligned). 
+$$ 4s_i < 3n_i \text{ and } 4s_i + 4 > 3n_i + 3 $$
+
+$$ 4s_i < 3n_i \text{ and } 4s_i + 1 > 3n_i $$
+
+This is not possible for natural numbers $$ s_i $$ and $$ n_i $$ which leads to a contradiction. 
+
+Therefore, the basketball player must always reach a point where their free throw average is $$ 75\% $$.
+
+**Extension**: For which integer triples $$ (a,b,c) $$ can a basketball player go from a free throw average of $$ a $$ to $$ c $$ while avoiding a free throw average of $$ b $$.
+
+**Solution (Extension)**: First we look at the case where $$ a < c $$. Looking at the previous proof, we note that all $$ b $$ such that $$ b = n/(n+1) $$ for some natural number $$ n $$ are unavoidable. To prove that they are the only unavoidable numbers, suppose $$ b = p/q $$ where $$ p + 1 \not = q $$. Using the same logic previously
+
+$$ qs_i < pn_i \text{ and } qs_i + (p-q) > pn_i $$
+
+If we have $$ pn_i = qs_i + 1 $$, we see that both equations are satsified. We know that it is always possible to find $$ n_i $$ and $$ s_i $$ such that this equation holds. To see this, note that since $$ p $$ and $$ q $$ are co-prime, there exist multiple $$ n_i $$ such that $$ pn_i \equiv 1 \pmod{q} $$. Therefore, $$ pn_i = qs_i + 1 $$. Therefore, to avoid $$ b $$, we note that we can first aim to reach $$ n_i $$ shots with $$ s_i $$ successful ones while making sure that all required successful shots happen at the end (to avoid crossing $$ b $$ before). Then we shoot one successful free throw to get to $$ (s_i + 1)/(n_i + 1) > b $$ after which you can reach $$ c $$ by frontloading successful shots.  
+
 
