Fix broken tweet links

--- a/_posts/personal/2024-03-22-IITKonCF.md
+++ b/_posts/personal/2024-03-22-IITKonCF.md
@@ -9,7 +9,7 @@ One of the more unfortunate aspects of IIT Kanpur culture has been the fact that
 
 This has been on the back of my mind until I noticed this tweet.
 
-{% twitter https://x.com/weights_theif/status/1768183586912411732 %}
+![Tweet screenshot](/assets/images/Screenshot 2025-10-31 161026.png)
 
 
 Similar to the tweet, I decided to first see how many people from IIT Kanpur have a max rating 1900. Running a small script, I found there were roughly 98 people. (The fact that some people create alts and some people don't put their college means that getting an exact count is hard).
